[package]
name = "rsqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.4.2", features = ["derive"] }
nom = "7.1.3"
nom-sql = "0.0.11"
rustyline = "12.0.0"
strum = "0.25.0"
strum_macros = "0.25.2"
